# poly-cite

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md  cite-parse-route-flow.mmd  glossary.md  handler-artifact-identity.mmd  polyglot-contract-boundary.mmd  prd.md  stress-test-cite-contract.md
docs/adrs/: 0001-polyglot-repo-structure.md  0002-cite-namespace-contract.md  0003-handler-identity.md  0004-proto-contract-handwritten-facades.md  0005-dependency-facades.md
docs/guides/: registering-a-scheme.md
docs/personas/: ai-assistant-integrator.md  app-tool-author.md  framework-author.md  handler-bundle-developers.md  handler-cli-tool-developers.md  handler-linux-package-maintainers.md  handler-persona-gaps.md  handler-personas.md  handler-platform-integrators.md  handler-windows-app-developers.md
docs/specs/: cite-contract.md  handler-identity.md  proto-contract.md
docs/stories/: US-0001-parse-namespaced-cite.md  US-0003-polyglot-contract-parity.md  (+8 more)
go/: README.md  go.mod
php/: .gitignore  CHANGELOG.md  README.md  composer.json  phpunit.xml
py/: CHANGELOG.md  README.md  pyproject.toml
py/src/cite/: registry.py  scheme.py
py/tests/: test_registry.py
rs/: Cargo.toml  README.md
rs/src/: handle.rs  lib.rs  registry.rs  scheme.rs
rs/tests/: contract.rs
ts/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+35 files in other folders)
